test/fail/bad-obj-base.mo
{ a = 3 in true };
let act = actor {};
{ a = 3 in act };
{ y = -25 in { y = 3; z = "H" } and { zx = 3 : Nat64 } and { zx = 3 : Nat64 } }
